# UrbanIng-V2X

./: .gitignore  LICENSE  README.md  README.txt  pyproject.toml  tutorial.ipynb
opencood/: .gitignore  README.md  environment.yml  requirements.txt  setup.py
opencood/opencood/data_utils/augmentor/: data_augmentor.py
opencood/opencood/data_utils/datasets/: __init__.py  basedataset.py
opencood/opencood/data_utils/post_processor/: __init__.py  base_postprocessor.py  bev_postprocessor.py  ciassd_postprocessor.py  fpvrcnn_postprocessor.py  voxel_postprocessor.py
opencood/opencood/data_utils/pre_processor/: __init__.py  bev_preprocessor.py
opencood/opencood/hypes_yaml/: yaml_utils.py
opencood/opencood/hypes_yaml/lidar/: sis_train_c1_c2_test_c3_cobevt.yaml
opencood/opencood/loss/: vanilla_seg_loss.py
opencood/opencood/models/fusion_modules/: coalign_fuse.py  split_attn.py  (+4 more)
opencood/opencood/tools/: inference.py  inference_utils.py  multi_gpu_utils.py  train.py  train_utils.py
opencood/opencood/utils/: bev_creation.py  box_overlaps.c  box_utils.py  camera_utils.py  common_utils.py  eval_utils.py  seg_utils.py
opencood/opencood/visualization/: vis_data_sequence.py
scripts/: create_nuscenes_format.py  create_opencood_format.py  create_opencood_splits.py  open3d_visualizer.py  plot_utils.py  requirements.txt  utils.py  video_creation.py
urbaning/: __init__.py  api_readme.md  pyproject.toml
urbaning/converters/: __init__.py  opencood.py  utils.py
urbaning/data/: __init__.py  camera_data.py  dataset.py  frame.py  info.py  infrastructure.py  labels.py  lanelet_map.py  lidar_data.py  object_label.py  registry.py  sequence.py  utils.py  vehicle.py  vehicle_state.py
urbaning/urbaning/converters/: utils.py
urbaning/urbaning/data/: __init__.py  download.py  frame.py  labels.py  lanelet_map.py  registry.py  unzip.py  vehicle_state.py
urbaning/urbaning/visualizer/: __init__.py  frame_visualizer.py
urbaning/visualizer/: __init__.py  bev_visualizer.py  camera_data_visualizer.py  utils.py  visualizers.py
(+20 files in other folders)
