[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "urbaning"
urls = { "Homepage" = "https://github.com/thi-ad/UrbanIng-V2X" }
authors = [
    {name = "Karthikeyan Chandra Sekaran", email = "karthikeyan.chandrasekaran@thi.de"},
    {name = "Markus Geißler", email = "markus.geisler@thi.de"},
    {name = "Dominik Roßle", email = "dominik.rossle@thi.de"},
]
version = "1.0.1"
description = "UrbanIng Dataset DevKit"
readme = "api_readme.md"
license = { text="MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = [
    "lanelet2; sys_platform == 'linux'",
    "matplotlib",
    "open3d",
    "pandas",
    "pyproj",
    "PyYAML",
    "scipy",
    "tqdm",
    "opencv-python",
    "pyDataverse"
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)